Fixed minor issues [docker_verify]